# gitrends

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_deb.sh  build_docker.sh
.github/workflows/: rust.yml
frontend/: .gitignore  build_js.sh  package.json  prod.webpack.config.js  tsconfig.json  webpack.config.js
frontend/scripts/: charts.tsx  config.ts  gitrends.tsx  helpers.ts  model.ts  viewHelpers.tsx
frontend/scripts/helpers/: autoCompleteInput.tsx  charts.tsx  misc.ts  selectedFileModal.tsx  selectedModuleModal.tsx  view.tsx
frontend/scripts/views/: changeCoupling.tsx  changeCouplingStructure.tsx  commitSpread.tsx  configuration.tsx  customAnalysis.tsx  home.tsx  hotspot.tsx  hotspotStructure.tsx  hotspots.tsx  hotspotsStructure.tsx  mainDeveloper.tsx  mainDeveloperStructure.tsx  modules.tsx  sumOfCouplings.tsx  timeline.tsx
frontend/static/: .gitignore
frontend/static/stylesheets/: main.css
src/: main.rs
src/indexing/: indexer.rs  mod.rs  source_code_analysis.rs
src/querying/: custom_functions.rs  data_transformers.rs  engine.rs  extras.rs  helpers.rs  mod.rs  model.rs  model_data_extraction.rs  printing.rs  querying_helpers.rs  querying_tests.rs
src/web/: app.rs  mod.rs
templates/: gitrends.html
test_data/: example_py.py  example_rust.rs
test_data/sqlgrep/: git_file_entries.parquet  git_log.parquet  modules.txt
