[package]
name = "gitrends"
version = "0.1.0"
edition = "2021"
authors = ["Anton Jansson <anton_jansson@live.se>"]
description = "Web-based behavior code analysis tool"
license = "MIT"
homepage = "https://github.com/svenslaggare/gitrends"

[package.metadata.deb]
assets = [
    ["target/release/gitrends", "usr/bin/gitrends", "755"],
    ["frontend/static/**/*", "etc/gitrends/static", "644"]
]

[dependencies]
thiserror = "2"
chrono = { version = "0.4", features=["serde"] }
arc-swap = "1"

log = "0.4"
fern = "0.7"

git2 = "0.20"

regex = "1"
glob = "0.3"

serde = { version = "1", features=["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }

parquet = "54"
parquet_derive = "54"
datafusion = "46"

axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs"] }
askama = "0.13"

clap = { version = "4", features = ["derive"] }